-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
During recovery the tgt_brw_lock() doesn't take locks in all cases but tgt_brw_unlock() is not taking that in consideration when doing assertion checks. As result we might get the following false assertion:
tgt_handler.c:1728:tgt_brw_unlock()) ASSERTION( (obj->ioo_bufcnt > 0 && (niob[0].rnb_flags & 0x200)) == lustre_handle_is_used(lh) ) failed